IMP-1437: Save changes bar controls in coverage map doesn't display correctly on Mobile UI

--- a/browser/src/app/entity/settings/contractor-account/service-area/service-area.component.scss
+++ b/browser/src/app/entity/settings/contractor-account/service-area/service-area.component.scss
@@ -21,7 +21,7 @@ agm-map::ng-deep {
 
 .action-bar {
   z-index: 1;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
